# gitlytix

./: .env.temp  README.md  docker-compose.yml
backend/: Dockerfile  README.md  github_events.sql  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: main.py  schemas.py
backend/app/api/routes/: issues.py  prs.py  stats.py
backend/app/core/: config.py  db.py  utils.py
frontend/: .gitignore  dashboard.tsx  package-lock.json  package.json
frontend/app/: dashboard-client.tsx  page.tsx
frontend/components/dashboard/: ActivityTab.tsx  BugFixRate.tsx  DocumentationQuality.tsx  NewContributors.tsx  OpenClosedIssues.tsx  ProjectOverview.tsx  ReleaseFreq.tsx  ScoreCard.tsx
frontend/lib/: scoring.ts
